# jdsite

./: .gitignore  Cargo.toml  cert.pem  key.pem  log.txt
src/: auth.rs  data.rs  db.rs  dir.rs  link.rs  login.rs  main.rs  notifications.rs  org.rs  section.rs  user.rs  util.rs
src/db/: mod.rs
src/form/: mod.rs
src/page/: admin.rs  associates.rs  clients.rs  details.rs  help.rs  login.rs  mod.rs  orgs.rs  outstanding.rs  section.rs  stats.rs  unreviewed.rs  user.rs
static/: Blog.html  contact.html  download.html  faq.html  home.html  page1.html  page3.html  page4.html
static/assets/: style.css
templates/: add_client_button.html  assign_admin.html  assign_admin_modal.html  associate_added.html  associates_list.html  change_password.html  client_list.html  client_row.html  login.html  nav_item.html  org_list.html  org_nav_item.html  org_root.html  org_row.html  page.html  user.html
templates/admin/: account_row.html  accounts.html  add_admin.html  admin.html  admin_added.html  data_deleted.html  delete_data.html
templates/associate/: add_associate.html  associate_added.html  associate_row.html  associates_list.html
templates/client/: add_client.html  client_added.html  client_dashboard.html  client_list.html  client_root.html  client_row.html  client_section_bubble.html
templates/email/: account_created.html  email.html
templates/login/: change_password.html  create_account.html  login.html  reset_password.html  reset_password_sent.html
templates/org/: add_org.html  assign_admin_modal.html  org_list.html  org_nav_item.html  org_row.html
templates/sections/: activity_option.html  file_bubble.html  file_upload.html  image_asset.html  outstanding_bubble.html  outstanding_list.html  outstanding_section_row.html  readonly_file_bubble.html  rejected_bubble.html  section.html  section_list.html  section_row.html  section_select.html  state_admin_completed.html  state_admin_in_review.html  (+3 more)
(+70 files in other folders)
