[package]
name = "jdsite"
version = "0.1.0"
authors = ["brodie <brodie@etellect.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "3.3.2"
actix-files = "0.4.0"
serde = "1.0.117"
serde_json = "1.0.59"
bincode="1.3.3"
render = "0.3.1"
rand = "0.7.3"
sled="0.34.6"
handlebars = { version = "3", features = ["dir_source"] }
uuid = { version = "0.8", features = ["serde", "v4"] }