[package]
name = "jdsite"
version = "0.1.0"
authors = ["brodie <brodie@etellect.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = { version = "3.3.2", features = ["openssl"] }
serde = "1.0.117"
serde_json = "1.0.59"
bincode="1.3.3"
sled="0.34.6"
handlebars = { version = "3", features = ["dir_source"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8.4"
sanitize-filename = "0.2"
actix-multipart = "0.3.0"
futures="0.3.1"
mime="0.3.16"
actix-files = "0.5.0"
chrono = "0.4.19"
lettre = "0.9.6"
lettre_email = "0.9.4"
openssl = { version = "0.10", features = ["v110"] }
async-std = "1.9.0"
maplit="1.0.2"

log="0.4.14"
simple-logging = "2.0.2"